--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,11 @@
+@import url("https://fonts.googleapis.com/css?family=Pinyon+Script");
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script:700');
+
 body {
     font-family:  “Helvetica”, sans-serif ;
     font-size: 16px;
-    padding: 0 200px;
+    padding: 0 150px;
+
 }
 
 header * {
@@ -11,16 +15,19 @@ header * {
 }
 
 header article{
+    font-family: Dancing Script, serif;
     float: left;
 }
 
 header article p{
     display: inline-block;
+    font-size: 2rem;
+    margin: 7px;
 }
 
 header nav{
     text-align: right;
-    background: #F0F1F5;
+    background: #E0E0E0;
     padding: 1px 12px;
 }
 
@@ -29,14 +36,65 @@ header nav ul li{
     padding-left: 10px;
 }
 
+header nav ul li a{
+    text-decoration: none;
+}
+
 header nav ul li a:hover{
-    color: orange;
+    color: darkslategrey;
 }
 
 main{
-    background-color: orange;
+    padding-top: 15px;
+    background: #F0F1F5;
 }
 
+main section{
+    text-align: center;
+    color: #F9690E;
+    padding: 10px;
+    margin: 0 20px;
+    border-radius: 20px;
+    background: url("../img/story.png") no-repeat;
+}
+
+
+main section h1{
+    font-family: Dancing Script, serif;
+    font-size: 4rem;
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+    margin: -20px;
+}
+
+main section p{
+    font-family: Pinyon Script, serif;
+    font-weight: bolder;
+    font-size: 2rem;
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+    margin-bottom: -5px;
+}
+
+main section span{
+    font-family: Pinyon Script, serif;
+    font-weight: bolder;
+    font-size: 3rem;
+}
+
+main section p a {
+    font-family:  “Helvetica”, sans-serif ;
+    font-style: italic;
+    font-size: 1.2rem;
+    color: #F9690E;
+    text-decoration: none;
+    border: 2px solid #F9690E;
+    padding: 5px;
+    border-radius: 1rem;
+}
+
+main section p a:hover{
+    color: darkslategrey;
+    border: 2px solid darkslategrey;
+}
 
 main article p{
     text-align: left;
@@ -63,7 +121,7 @@ main article a{
 
 footer{
     padding: 10px;
-    background: #F0F1F5;
+    background: #E0E0E0;
 }
 
 footer article:nth-child(1){
