Adding and getting DB.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,11 +47,11 @@ header nav ul li a:hover{
 }
 
 main{
-    padding-top: 15px;
+    padding: 10px 0 10px 0;
     background: #F0F1F5;
 }
 
-main section{
+section.home-main{
     text-align: center;
     color: #F9690E;
     padding: 10px;
@@ -61,7 +61,7 @@ main section{
 }
 
 
-main section h1{
+section.home-main h1{
     font-size: 4rem;
     text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
     margin: -20px;
@@ -71,7 +71,7 @@ h1, h2 {
     font-family: Dancing Script, serif;
 }
 
-main section p{
+section.home-main p{
     font-family: Pinyon Script, serif;
     font-weight: bolder;
     font-size: 2rem;
@@ -79,13 +79,13 @@ main section p{
     margin-bottom: -5px;
 }
 
-main section span{
+section.home-main span{
     font-family: Pinyon Script, serif;
     font-weight: bolder;
     font-size: 3rem;
 }
 
-main section p a {
+section.home-main p a {
     font-family:  “Helvetica”, sans-serif ;
     font-style: italic;
     font-size: 1.2rem;
@@ -96,28 +96,28 @@ main section p a {
     border-radius: 1rem;
 }
 
-main section p a:hover{
+section.home-main p a:hover{
     color: orange;
     border: 2px solid orange;
 }
 
-main article p{
+article.home-main p{
     text-align: left;
     padding: 0.8rem;
 }
-main article{
+article.home-main{
     background: #F9690E;
     color: #F0F1F5;
     text-align: center;
     display: inline-block;
     width: 31.3%;
-    margin: 10px 0 10px 12px;
+    margin: 10px 0 0 12px;
     vertical-align: top;
     border-radius: 15px;
 
 }
 
-main article a{
+article.home-main a{
     display: inline-block;
     text-decoration: none;
     color: white;
@@ -165,7 +165,7 @@ footer article a i {
     background: #F9690E;
     width: 400px;
     color: white;
-    margin: 10px auto;
+    margin: 0 auto;
     padding: 15px 30px;
     border-radius: 10px;
     text-align: center;
@@ -193,4 +193,35 @@ footer article a i {
 .button:hover{
     background: white;
     color: #F9690E;
+}
+
+.errors{
+    width: 35%;
+    border: 2px solid red;
+    color: red;
+    margin: 10px auto;
+    border-radius: 10px;
+}
+
+.story{
+    width: 70%;
+    background: #F9690E;
+    color: white;
+    margin: 0 auto;
+    padding: 10px 20px;
+    border-radius: 10px;
+}
+
+.story h3{
+    border-bottom: 1px solid white;
+    padding: 5px 0 5px 0;
+}
+
+.story a {
+    text-decoration: none;
+    color: white;
+}
+
+section.story p:nth-child(3){
+    text-align: right;
 }
