--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,7 +51,7 @@ header nav ul li a:hover{
 }
 
 main{
-    padding: 10px 0 10px 0;
+    padding: 1rem 0 1rem 0;
     background: #F0F1F5;
 }
 
@@ -105,27 +105,53 @@ section.home-main p a:hover{
     border: 2px solid orange;
 }
 
-article.home-main p{
-    text-align: left;
-    padding: 0.8rem;
+
+.home-articles{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
-article.home-main{
+
+.about-article,
+.home-article {
     background: #F9690E;
     color: #F0F1F5;
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    display: inline-block;
-    width: 31.3%;
-    margin: 10px 0 0 12px;
-    vertical-align: top;
-    border-radius: 15px;
-
+    max-width: 29%;
+    margin-top: 1rem;
+    padding: 0 0.5rem 0 0.5rem;
+    border-radius: 1rem;
+    flex: 1 1 29%;
 }
 
-article.home-main a{
-    display: inline-block;
+.home-paragraph{
+    height: auto;
+    display: flex;
+    flex-grow: 1;
+}
+
+.home-article .home-paragraph p{
+    text-align: left;
+    padding: 0 0.5rem 0 0.5rem;
+}
+
+.single-article a,
+.home-article a{
+    display: flex;
     text-decoration: none;
     color: white;
-    padding: 0 0 10px 120px;
+    justify-content: flex-end;
+    margin: 0 2rem 1rem 0;
+}
+
+.single-article{
+    background: #F9690E;
+    color: #F0F1F5;
+    padding: 1rem;
+    margin: 1rem;
+    border-radius: 0.5rem;
 }
 
 .form input,
@@ -216,9 +242,11 @@ footer article a i {
     border-radius: 10px;
 }
 
+.single-article header,
+.home-article header,
 .story header{
     border-bottom: 1px solid white;
-    padding: 5px 0 5px 0;
+    padding: 0.5rem 0 0.5rem 0;
 }
 
 .story header h3,
@@ -233,4 +261,15 @@ footer article a i {
 
 section.story p:nth-child(3){
     text-align: right;
+}
+
+.about{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+
+.about-article{
+    display: flex;
+    vertical-align: top;
 }
