Delete Story button with red color

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -281,3 +281,9 @@ section.story p:nth-child(3){
 .delete a{
     margin-left: auto;
 }
+
+.delete input:hover {
+    background: red;
+    border-color: red;
+    color: white;
+}
