Select Categories On Create and Edit Story

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -173,6 +173,10 @@ section.home-main p a:hover{
     margin-top: 5px;
 }
 
+.form label{
+    display: block;
+}
+
 .form textarea{
     vertical-align: top;
 }
