Bigger forms for share and edit

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -218,6 +218,10 @@ footer article a i {
     text-align: center;
 }
 
+.shear-form{
+    width: 55vw;
+}
+
 .form-login ,
 .form-register{
     width: 60%;
