--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,10 @@
 @import url("https://fonts.googleapis.com/css?family=Dancing+Script:700");
 @import url('https://fonts.googleapis.com/css?family=Bitter');
 
+*{
+    box-sizing: border-box;
+}
+
 body {
     font-family:  Bitter, serif ;
     font-size: 16px;
@@ -429,5 +433,9 @@ section.story p:nth-child(3){
 
 .my-story div a:nth-child(3){
     color: red;
+}
+
+img{
+    width: 100%;
 }
 
